--- a/index.html
+++ b/index.html
@@ -8,28 +8,136 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- noUiSlider css -->
+    <link rel="stylesheet" href="./assets/noUiSlider.css">
+    <!-- our css -->
+    <link rel="stylesheet" href="./pets-furever/styles.css">
 </head>
 
 <body>
 
-    
+
+    <!-- navbar -->
+    <!-- logo? pets furever next to logo -->
+    <!-- dropdowns or links? -->
+    <nav>
+        <div class="nav-wrapper blue-grey darken-2">
+            <a href="./images/logo.png" class="brand-logo "><img src="./images/logo.png" alt="Pets Furever Logo"
+                    width="60" height="60"></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Adopt</a></li>
+                <li><a href="badges.html">Adopt</a></li>
+                <li><a href="collapsible.html">Adopt</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- title -->
+    <!-- adopt your new furever pet! -->
 
 
+    <!-- carosel for pets needing adoption the most -->
     <div class="carousel">
+        <!-- a tags will be dynamiclly made with js -->
         <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
         <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
         <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
         <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
         <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-      </div>
+    </div>
 
+    <!-- find out what bread is right for you (just dogs) -->
+    <!-- breeds -->
+    <!-- size -->
+    <!-- sex -->
+    <!-- age group -->
+    <!-- house trained -->
+    <!-- is cats ok -->
+    <!-- is dogs ok -->
+    <!-- is kids ok -->
+
+
+
+
+    <!-- pet search -->
+    <div class="row">
+        <!-- search options -->
+        <!-- species -->
+        <div class="input-field col s12">
+            <select multiple>
+                <option value="" disabled selected>Choose your breed</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+            </select>
+
+        </div>
+
+    </div>
+    <!-- size -->
+
+    <!-- age group -->
+    <div class="row">
+        <div id="test-slider"></div>
+    </div>
+    <!-- sex -->
+    <div class="row">
+
+    </div>
+    <!-- house trained -->
+    <div class="row">
+    </div>
+    <!-- distance -->
+    <div class="row">
+        <form action="#">
+            <p class="range-field">
+                Distance:
+                <input type="range" id="test5" min="0" max="100" />
+            </p>
+        </form>
+    </div>
+    </div>
+
+
+
+
+
+    <!-- footer -->
+    <!-- floatinf action button for our info -->
+    <!-- or side navbar -->
+
+    <footer class="page-footer  blue-grey darken-2">
+        <div class="container">
+            © 2014 Copyright Text
+            <div class="grey-text text-lighten-4 right" href="#!">
+                <div class="fixed-action-btn">
+                    <a class="btn-floating pulse btn-large cyan">
+                        <i class="large material-icons">people</i>
+                    </a>
+                    <ul>
+                        <li><a href="https://github.com/toveson" class="btn-floating float-5 red">T</a></li>
+                        <li><a class="btn-floating yellow darken-1"><i class="material-icons">person_pin</i></a></li>
+                        <li><a class="btn-floating green"><i class="material-icons">person_pin</i></a></li>
+
+                    </ul>
+                </div>
+            </div>
+
+
+        </div>
+    </footer>
 
     <!-- jquery cdn -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+    <!-- our js -->
     <script src="./pets-furever/script.js"></script>
+    <!-- noUiSlider js -->
+    <script src="./assets/noUiSlider.js"></script>
+
+
 </body>
 
 </html>
