--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- uikit css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
-
     <title>Pets Furever</title>
 </head>
 
@@ -46,10 +45,13 @@
 
 
     <!-- cards to promote pets -->
-    <div>
-        <ul class=""uk-slider-items uk-child-width-1-2@s uk-child-width-1-3@m uk-grid">
-            <li class="at-risk"></li>
-        </ul>
+    <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
+
+        <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
+
+        <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+        <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+    
     </div>
 
     <!-- search form -->
