added options for house trained, good with cats, dogs, and or kids

--- a/index.html
+++ b/index.html
@@ -67,12 +67,31 @@
                         <option>Click for breeds</option>
                     </select>
                 </div>
-                <!-- check boxes for traits from ajax -->
+                <!-- House Trained -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                    <p>Pick as many as you want</p>
-                    <label><input class="uk-checkbox" type="checkbox"> A</label>
-                    <label><input class="uk-checkbox" type="checkbox"> B</label>
+                    <p>House Trained</p>
+                    <label><input class="uk-checkbox" type="checkbox"> Yes</label>
+                    <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
+                <!-- Good with cats -->
+                <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                    <p>Okay with Cats</p>
+                    <label><input class="uk-checkbox" type="checkbox"> Yes</label>
+                    <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
+                </div>
+                <!-- good with dogs -->
+                <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                    <p>Okay with Dogs</p>
+                    <label><input class="uk-checkbox" type="checkbox"> Yes</label>
+                    <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
+                </div>
+                <!-- good with kids -->
+                <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+                    <p>Okay with Kids</p>
+                    <label><input class="uk-checkbox" type="checkbox"> Yes</label>
+                    <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
+                </div>
+
                 <!-- check boxes for sex -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid gender-select">
                     <p>Gender</p>
