adjusted the form min and maxes as well as increments so that they would reflect the options that are returned in the API. We will need to add javascript functionality to read the changes made in the forms as it doesn't appear that the html elements are adjusted at all based off of what is moved or selected

--- a/index.html
+++ b/index.html
@@ -69,50 +69,53 @@
                 </div>
                 <!-- House Trained -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                    <p>House Trained</p>
+                    <p>House Trained:</p>
                     <label><input class="uk-checkbox" type="checkbox"> Yes</label>
                     <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
                 <!-- Good with cats -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                    <p>Okay with Cats</p>
+                    <p>Okay with Cats:</p>
                     <label><input class="uk-checkbox" type="checkbox"> Yes</label>
                     <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
                 <!-- good with dogs -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                    <p>Okay with Dogs</p>
+                    <p>Okay with Dogs:</p>
                     <label><input class="uk-checkbox" type="checkbox"> Yes</label>
                     <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
                 <!-- good with kids -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-                    <p>Okay with Kids</p>
+                    <p>Okay with Kids:</p>
                     <label><input class="uk-checkbox" type="checkbox"> Yes</label>
                     <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
 
                 <!-- check boxes for sex -->
                 <div class="uk-margin uk-grid-small uk-child-width-auto uk-grid gender-select">
-                    <p>Gender</p>
+                    <p>Gender:</p>
                     <label><input class="uk-checkbox" type="checkbox"> Female</label>
                     <label><input class="uk-checkbox" type="checkbox"> Male</label>
                     <label><input class="uk-checkbox" type="checkbox"> No Preference</label>
                 </div>
                 <!-- size for search slider -->
                 <div class="uk-margin">
-                    <p>Pick a size</p>
-                    <input class="uk-range" type="range" value="2" min="0" max="10" step="0.1">
+                    <p>Size Group: </p>
+                    <!-- add text to show what each selection means -->
+                    <input class="uk-range size-option" type="range" value="2" min="1" max="4" step="1">
                 </div>
                 <!-- age for search slider -->
                 <div class="uk-margin">
-                    <P>How old of a pet?</P>
-                    <input class="uk-range" type="range" value="2" min="0" max="10" step="0.1">
+                    <p">Age Group: </p>
+                    <!-- add text to show what each selection means -->
+                    <input class="uk-range size-option" type="range" value="2" min="1" max="4" step="1">
                 </div>
                 <!-- distance for search slider -->
                 <div class="uk-margin">
-                    <p>Distance to search.</p>
-                    <input class="uk-range" type="range" value="50" min="0" max="100" step="0.1">
+                    <p>Distance: </p>
+                    <!-- add text to show what each selection means -->
+                    <input class="uk-range" type="range" value="33" min="0" max="100" step="0.1">
                 </div>
 
             </fieldset>
