--- a/index.html
+++ b/index.html
@@ -101,21 +101,21 @@
                 </div>
                 <!-- size for search slider -->
                 <div class="uk-margin">
-                    <p>Size Group: </p>
+                    <p class="size-text">Size Group: </p>
                     <!-- add text to show what each selection means -->
-                    <input class="uk-range size-option" type="range" value="2" min="1" max="4" step="1">
+                    <input class="uk-range size-select" type="range" value="2" min="1" max="4" step="1">
                 </div>
                 <!-- age for search slider -->
                 <div class="uk-margin">
-                    <p">Age Group: </p>
+                    <p class="age-text">Age Group: </p>
                     <!-- add text to show what each selection means -->
-                    <input class="uk-range size-option" type="range" value="2" min="1" max="4" step="1">
+                    <input class="uk-range age-select" type="range" value="2" min="1" max="4" step="1">
                 </div>
                 <!-- distance for search slider -->
                 <div class="uk-margin">
-                    <p>Distance: </p>
+                    <p class="distance-text">Distance: </p>
                     <!-- add text to show what each selection means -->
-                    <input class="uk-range" type="range" value="33" min="0" max="100" step="0.1">
+                    <input class="uk-range distance-select" type="range" value="33" min="0" max="500" step="1">
                 </div>
 
             </fieldset>
