pushing before pulling down another branch

--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
                     <!-- add text to show what each selection means -->
                     <input class="uk-range distance-select" type="range" value="33" min="0" max="500" step="1">
                 </div>
-
+                <!-- Submit Button -->
+                <div class="uk-margin" uk-margin>
+                    <button class="uk-button uk-button-default submit-search">Submit</button>
+                </div>
             </fieldset>
         </form>
     </div>
