added a container on the slider for at risk pets

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 	<header>
 		<nav class="uk-navbar-container uk-background-primary" uk-navbar>
 			<div class="uk-navbar-left">
-				<a class="logo" href="#"> <img src="./images/logo.png" alt="dog on a leash inside a paw" style="width:65px;height:65px;"> </a>
+				<a class="logo" href="#"> <img src="./images/logo.png" alt="dog on a leash inside a paw"
+						style="width:65px;height:65px;"> </a>
 			</div>
 			<div class="uk-navbar-center">
-				<h1>Pets Furever</h1> </div>
-			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
+				<h1>Pets Furever</h1>
+			</div>
+			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About
+					Us</a> </div>
 			<!-- <ul class="uk-navbar-right">
                     <li>
                         <a href="#">
@@ -35,10 +38,14 @@
 	</header>
 	<!-- Adopt a pet today! -->
 	<!-- cards to promote pets -->
-	<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
-		<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
-		<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-		<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
+	<div class="uk-container uk-container-small">
+		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
+			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
+			<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+				uk-slider-item="previous"></a>
+			<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+				uk-slider-item="next"></a>
+		</div>
 	</div>
 	<!-- search form -->
 	<div class="uk-container uk-container-small">
@@ -106,15 +113,18 @@
 				<!-- size for search slider -->
 				<div class="uk-margin">
 					<p class="size-text">Size Group: No Preference</p>
-					<input class="uk-range size-select" type="range" value="0" min="0" max="4" step="1"> </div>
+					<input class="uk-range size-select" type="range" value="0" min="0" max="4" step="1">
+				</div>
 				<!-- age for search slider -->
 				<div class="uk-margin">
 					<p class="age-text">Age Group: No Preference</p>
-					<input class="uk-range age-select" type="range" value="0" min="0" max="4" step="1"> </div>
+					<input class="uk-range age-select" type="range" value="0" min="0" max="4" step="1">
+				</div>
 				<!-- distance for search slider -->
 				<div class="uk-margin">
 					<p class="distance-text">Distance: 0 Miles</p>
-					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1"> </div>
+					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1">
+				</div>
 				<!-- Submit Button -->
 				<div class="uk-margin" uk-margin>
 					<button class="uk-button uk-button-default submit-search search-pets">Submit</button>
@@ -138,7 +148,8 @@
 		</div>
 	</div>
 	<!-- uikit js -->
-	<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"
+		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit-icons.min.js"></script>
 	<script src="assets/script.js"></script>
