created functions to grab the data for each user selection and store it in local storage so that it can be grabbed for the API query. Also created functionality to clear user storage if 'no preference' is selected or when submit is pressed so that local storage doesn't become stale with previous user selections

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<input class="uk-range age-select" type="range" value="0" min="0" max="4" step="1"> </div>
 				<!-- distance for search slider -->
 				<div class="uk-margin">
-					<p class="distance-text">Distance: 0 Miles</p>
+					<p class="distance-text">Distance: No Preference</p>
 					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1"> </div>
 				<!-- Submit Button -->
 				<div class="uk-margin" uk-margin>
