Fixing code code locally

--- a/Search.html
+++ b/Search.html
@@ -112,7 +112,7 @@
     </div>
 
 
-    <ul class="uk-pagination uk-flex-center" uk-margin>
+    <!-- <ul class="uk-pagination uk-flex-center" uk-margin>
         <li><a href="#"><span uk-pagination-previous></span></a></li>
         <li><a href="#">1</a></li>
         <li class="uk-disabled"><span>...</span></li>
@@ -121,7 +121,7 @@
         <li class="uk-active"><span>7</span></li>
         <li><a href="#">8</a></li>
         <li><a href="#"><span uk-pagination-next></span></a></li>
-    </ul>
+    </ul> -->
 
    
 
