--- a/index.html
+++ b/index.html
@@ -136,13 +136,18 @@
 		<div class="uk-offcanvas-bar">
 			<ul class="uk-nav uk-nav-default">
 				<!-- put our info here -->
-				<li class="uk-active"><a href="#">Active</a></li>
-				<li><a href="#">Item</a></li>
-				<li class="uk-nav-header">Header</li>
-				<li><a href="#">Item</a></li>
-				<li><a href="#">Item</a></li>
-				<li class="uk-nav-divider"></li>
-				<li><a href="#">Item</a></li>
+				<li class="uk-nav-header">Pets Furever</li>
+				<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minima harum aliquam similique, facere debitis rerum soluta sed optio blanditiis accusamus amet alias quae voluptatibus quam voluptate rem quos libero?</p></li>
+				<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minima harum aliquam similique, facere debitis rerum soluta sed optio blanditiis accusamus amet alias quae voluptatibus quam voluptate rem quos libero?</p></li>
+				<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minima harum aliquam similique, facere debitis rerum soluta sed optio blanditiis accusamus amet alias quae voluptatibus quam voluptate rem quos libero?</p></li>
+				<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minima harum aliquam similique, facere debitis rerum soluta sed optio blanditiis accusamus amet alias quae voluptatibus quam voluptate rem quos libero?</p></li>
+				
+				<li class="uk-nav-header">Other links</li>
+				<li><a href="#">pet food recipes</a></li>
+				<li><a href="#">plcaeholder</a></li>
+
+				<li class="uk-nav-header">Made by:</li>
+				<li><p>Diana Shull, Molly Sweetman and, Trever Oveson.</p></li>
 			</ul>
 		</div>
 	</div>
