--- a/Search.html
+++ b/Search.html
@@ -30,7 +30,7 @@
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
                 <div class="uk-width-auto">
-                    <img class="uk-border-circle search-images" width="40" height="40" src="images/logo.png" alt="image of dog for adoption">
+                    <img class="uk-border-circle search-images" width="100" height="100" src="" alt="image of dog for adoption">
                 </div>
                 <div class="uk-width-expand">
                     <h3 class="uk-card-title uk-margin-remove-bottom">Dog Name</h3>
@@ -51,7 +51,7 @@
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
                 <div class="uk-width-auto">
-                    <img class="uk-border-circle search-images" width="40" height="40" src="images/logo.png" alt="image of dog for adoption">
+                    <img class="uk-border-circle search-images" width="100" height="100" src="" alt="image of dog for adoption">
                 </div>
                 <div class="uk-width-expand">
                     <h3 class="uk-card-title uk-margin-remove-bottom">Dog Name</h3>
@@ -72,7 +72,7 @@
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
                 <div class="uk-width-auto">
-                    <img class="uk-border-circle search-images" width="40" height="40" src="images/logo.png" alt="image of dog for adoption">
+                    <img class="uk-border-circle search-images" width="100" height="100" src="" alt="image of dog for adoption">
                 </div>
                 <div class="uk-width-expand">
                     <h3 class="uk-card-title uk-margin-remove-bottom">Dog Name</h3>
@@ -93,7 +93,7 @@
         <div class="uk-card-header">
             <div class="uk-grid-small uk-flex-middle" uk-grid>
                 <div class="uk-width-auto">
-                    <img class="uk-border-circle search-images" width="40" height="40" src="images/logo.png" alt="image of dog for adoption">
+                    <img class="uk-border-circle search-images" width="100" height="100" src="" alt="image of dog for adoption">
                 </div>
                 <div class="uk-width-expand">
                     <h3 class="uk-card-title uk-margin-remove-bottom">Dog Name</h3>
@@ -125,7 +125,21 @@
 
    
 
-
+	<!-- about us menu -->
+	<div id="offcanvas-slide" uk-offcanvas>
+		<div class="uk-offcanvas-bar">
+			<ul class="uk-nav uk-nav-default">
+				<!-- put our info here -->
+				<li class="uk-active"><a href="#">Active</a></li>
+				<li><a href="#">Item</a></li>
+				<li class="uk-nav-header">Header</li>
+				<li><a href="#">Item</a></li>
+				<li><a href="#">Item</a></li>
+				<li class="uk-nav-divider"></li>
+				<li><a href="#">Item</a></li>
+			</ul>
+		</div>
+	</div>
 
     <script src="js/uikit.min.js"></script>
     <script src="js/uikit-icons.min.js"></script>
