--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- cards to promote pets -->
 	<div class="uk-container uk-container-small">
 		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
-			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
+			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-search-input at-risk"></ul>
 			<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
 				uk-slider-item="previous"></a>
 			<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
