adding adoption application

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 				<li><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid minima harum aliquam similique, facere debitis rerum soluta sed optio blanditiis accusamus amet alias quae voluptatibus quam voluptate rem quos libero?</p></li>
 				
 				<li class="uk-nav-header">Other links</li>
-				<li><a href="#">pet food recipes</a></li>
-				<li><a href="#">plcaeholder</a></li>
+				<li><a href="#">Pet Food Recipes</a></li>
+				<li><a href="#">Adoption Application</a></li>
 
 				<li class="uk-nav-header">Made by:</li>
-				<li><p>Diana Shull, Molly Sweetman and, Trever Oveson.</p></li>
+				<li><p>Diana Shull, Molly Sweetman and Trever Oveson.</p></li>
 			</ul>
 		</div>
 	</div>
