--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1"> </div>
 				<!-- Submit Button -->
 				<div class="uk-margin" uk-margin>
-					<button class="uk-button uk-button-default submit-search search-pets">Submit</button>
+					<a href="./Search.html" class="uk-button uk-button-default submit-search search-pets">Submit</a>
 				</div>
 			</fieldset>
 		</form>
