--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- uikit css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
+	
+	<link rel="stylesheet" href="./assets/styles.css">
 	<title>Pets Furever</title>
 </head>
 
@@ -14,8 +16,7 @@
 	<header>
 		<nav class="uk-navbar-container uk-background-primary" uk-navbar>
 			<div class="uk-navbar-left">
-				<a class="logo" href="#"> <img src="./images/logo.png" alt="dog on a leash inside a paw"
-						style="width:65px;height:65px;"> </a>
+				<a class="logo" href="#"><img src="./images/logo.png" alt="dog on a leash inside a paw"></a>
 			</div>
 			<div class="uk-navbar-center">
 				<h1>Pets Furever</h1>
@@ -38,7 +39,7 @@
 	</header>
 	<!-- Adopt a pet today! -->
 	<!-- cards to promote pets -->
-	<div class="uk-container uk-container-small">
+	<div class="uk-container uk-container-small uk-margin">
 		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
 			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
 			<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
