changed the alt tag for the paw. Fixed the carousel so that all images are the same height and adjusted padding in between images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- uikit css -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
-	
+	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./assets/styles.css">
 	<title>Pets Furever</title>
 </head>
@@ -16,13 +16,12 @@
 	<header>
 		<nav class="uk-navbar-container uk-background-primary" uk-navbar>
 			<div class="uk-navbar-left">
-				<a class="logo" href="#"><img src="./images/logo.png" alt="dog on a leash inside a paw"></a>
+				<a class="logo" href="#"><img src="./images/logo.png" alt="white dog paw"></a>
 			</div>
 			<div class="uk-navbar-center">
 				<h1>Pets Furever</h1>
 			</div>
-			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About
-					Us</a> </div>
+			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
 			<!-- <ul class="uk-navbar-right">
                     <li>
                         <a href="#">
