adding links to recipes.html and application.html

--- a/application.html
+++ b/application.html
@@ -154,6 +154,34 @@
                         <legend class="uk-legend">HOUSEHOLD INFORMATION</legend>
 
                         <div class="uk-margin">
+                            <div class="uk-form-label">Do you own or rent your home?</div>
+                            <div class="uk-form-controls">
+                                <label><input class="uk-radio" type="radio" name="radio1">Own</label><br>
+                                <label><input class="uk-radio" type="radio" name="radio1">Rent</label>
+                            </div>
+                        </div>
+                        <div class="uk-margin">
+                            <div class="uk-form-label">If renting, are animals allowed?</div>
+                            <div class="uk-form-controls">
+                                <label><input class="uk-radio" type="radio" name="radio1">Yes</label><br>
+                                <label><input class="uk-radio" type="radio" name="radio1">No</label>
+                            </div>
+                        </div>
+                        <div class="uk-margin">
+                            <div class="uk-form-label">Do you have a backyard?</div>
+                            <div class="uk-form-controls">
+                                <label><input class="uk-radio" type="radio" name="radio1">Yes</label><br>
+                                <label><input class="uk-radio" type="radio" name="radio1">No</label>
+                            </div>
+                        </div>
+                        <div class="uk-margin">
+                            <div class="uk-form-label">If so, is it fenced?</div>
+                            <div class="uk-form-controls">
+                                <label><input class="uk-radio" type="radio" name="radio1">Yes</label><br>
+                                <label><input class="uk-radio" type="radio" name="radio1">No</label>
+                            </div>
+                        </div>
+                        <div class="uk-margin">
                             <div>Please indicate how many adults live in the home:</div>
                             <input class="uk-input" type="text" placeholder="Name">
 
@@ -164,10 +192,10 @@
                         </div>
 
                         <div class="uk-margin">
-                            <div class="uk-form-label">Radio</div>
+                            <div class="uk-form-label">Are all members of the household in agreement about adopting a dog?</div>
                             <div class="uk-form-controls">
-                                <label><input class="uk-radio" type="radio" name="radio1"> Option 01</label><br>
-                                <label><input class="uk-radio" type="radio" name="radio1"> Option 02</label>
+                                <label><input class="uk-radio" type="radio" name="radio1">Yes</label><br>
+                                <label><input class="uk-radio" type="radio" name="radio1">No</label>
                             </div>
                         </div>
                         <div class="uk-margin">
@@ -177,6 +205,10 @@
                             </div>
                         </div>
                     </fieldset>
+                    <div class="uk-margin" uk-margin>
+                        
+                        <button class="uk-button uk-button-default">Submit</button>
+                    </div>
                 </form>
 
 
