--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="uk-navbar-center">
 				<h1>Pets Furever</h1>
 			</div>
-			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
+			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt today</a> </div>
 		</nav>
 	</header>
 	<!-- about us menu -->
