--- a/recipes.html
+++ b/recipes.html
@@ -6,6 +6,7 @@
     <title>Dog Food Recipes</title>
 </head>
 <body>
+    <h1>Dog Food Recipes</h1>
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
         <div class="uk-card-media-left uk-cover-container">
             <a href="https://www.allrecipes.com/recipe/140286/homemade-dog-food/">
