--- a/application.html
+++ b/application.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="uk-navbar-container uk-background-primary" uk-navbar>
             <div class="uk-navbar-left">
-                <a class="logo" href="#"><img src="./images/logo.png" alt="white dog paw"></a>
+                <a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a>
             </div>
             <div class="uk-navbar-center">
                 <h1>Pets Furever</h1>
@@ -51,11 +51,11 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="uk-active"><a href="application.html">| Adoption Application |</a></li>
                 <li><a href="recipes.html">Pet Food Recipes</a></li>
-                
-				<li class="uk-nav-header">Coming Soon</li>
-				<li><a href="#">Search more than dogs</a></li>
-				<li><a href="#">adoption stories</a></li>
-				
+
+                <li class="uk-nav-header">Coming Soon</li>
+                <li><a href="#">Search more than dogs</a></li>
+                <li><a href="#">adoption stories</a></li>
+
                 <li class="uk-nav-header">Made by:</li>
                 <li>
                     <p>Diana Shull, Molly Sweetman and Trever Oveson.</p>
