added to readme and fixed links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 				</li>
 
 				<li class="uk-nav-header">Links</li>
-				<li class="uk-active">
-					<ahref="index.html">| Home |</a>
-				</li>
+				<li class="uk-active"><ahref="index.html">| Home |</a></li>
 				<li><a href="application.html">Adoption Application</a></li>
 				<li><a href="recipes.html">Pet Food Recipes</a></li>
 
@@ -64,6 +62,7 @@
 			</ul>
 		</div>
 	</div>
+	<img src="" alt="">
 	<!-- Adopt a pet today! -->
 	<!-- cards to promote pets -->
 	<div class="uk-container uk-container-small uk-margin">
