--- a/index.html
+++ b/index.html
@@ -4,175 +4,155 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- uikit css -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css" />
+	<!-- UIKIT CSS STYLESHEET -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/css/uikit.min.css">
+	<!-- GOOGLE FONTS STYLESHEET -->
 	<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+	<!-- PROJECT STYLESHEET -->
 	<link rel="stylesheet" href="./assets/styles.css">
 	<title>Pets Furever</title>
 </head>
 
 <body>
-	<!-- Navbar -->
+	<!-- NAVBAR/HEADER -->
 	<header>
-		<nav class="uk-navbar-container uk-background-primary" uk-navbar>
+		<nav class="uk-navbar-container uk-background-primary uk-navbar">
 			<div class="uk-navbar-left">
 				<a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a>
 			</div>
 			<div class="uk-navbar-center">
 				<h1>Pets Furever</h1>
 			</div>
-			<div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt today</a> </div>
+			<div class="uk-navbar-right">
+				<a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt today</a>
+			</div>
 		</nav>
 	</header>
-	<!-- about us menu -->
+	<!-- ABOUT US MENU -->
 	<div id="offcanvas-slide" uk-offcanvas>
 		<div class="uk-offcanvas-bar">
 			<ul class="uk-nav uk-nav-default">
-				<!-- put our info here -->
+				<!-- ABOUT PETS FUREVER -->
 				<li class="uk-nav-header">Pets Furever</li>
 				<li>
-					<p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.
-					</p>
+					<p>All of us at Pets Furever have dogs and are passionate about making sure every dog has a home.</p>
 				</li>
 				<li>
-					<p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and
-						fun.</p>
+					<p>Pets furever is a very functional, easy-to-use application that makes adopting a pet simple and fun.</p>
 				</li>
 				<li>
 					<p>We are passionate about making sure every dog has a furever home.</p>
 				</li>
 				<li>
-					<p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in
-						need of a loving home</p>
+					<p>Pets Furever used Rescue Group API to present the user all the dogs in their area that are in need of a loving home</p>
 				</li>
-
+				<!-- PETS FUREVER PAGE LINKS -->
 				<li class="uk-nav-header">Links</li>
 				<li class="uk-active"><ahref="index.html">| Home |</a></li>
 				<li><a href="application.html">Adoption Application</a></li>
 				<li><a href="recipes.html">Pet Food Recipes</a></li>
-
+				<!-- COMING SOON -->
 				<li class="uk-nav-header">Coming Soon</li>
 				<li><a href="#">Search more than dogs</a></li>
 				<li><a href="#">adoption stories</a></li>
-
+				<!-- CREATED BY -->
 				<li class="uk-nav-header">Made by:</li>
 				<li>
 					<p>Diana Shull, Molly Sweetman and Trever Oveson.</p>
 				</li>
 			</ul>
 		</div>
-
 	</div>
-	<img src="" alt="">
-	<!-- Adopt a pet today! -->
-	<!-- cards to promote pets -->
+	<!-- AT RISK DOGS -->
 	<div class="uk-container uk-container-small uk-margin">
 		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
-			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m uk-search-input at-risk"></ul>
+			<ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@m at-risk"></ul>
 			<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
 				uk-slider-item="previous"></a>
 			<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
 				uk-slider-item="next"></a>
-=======
-		<!-- AT RISK DOGS -->
-		<div class="uk-container uk-margin">
-			<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="sets: true">
-				<ul class="uk-slider-items uk-search-input at-risk"></ul>
-				<a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
-					uk-slider-item="previous"></a>
-				<a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
-					uk-slider-item="next"></a>
-			</div>
-
 		</div>
 	</div>
-	<!-- search form -->
+	<!-- SEARCH FORM -->
 	<div class="uk-container uk-container-small">
 		<form>
 			<fieldset class="uk-fieldset">
 				<legend class="uk-legend">Find a pet!</legend>
 				<div class="uk-margin">
 					<select class="uk-select breed-select">
-						<!-- these can be breeds made from ajax response -->
+						<!-- GENERATED THROUGH AJAX RESPONSE -->
 						<option class="breed-select-text">Click for breeds</option>
 					</select>
 				</div>
-				<!-- House Trained -->
+				<!-- HOUSE TRAINED OPTIONS -->
 				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
 					<p>House Trained:</p>
 					<div class="house-trained">
-						<label>
-							<input class="uk-checkbox house-trained-yes" type="checkbox">Yes</label>
-						<label>
-							<input class="uk-checkbox house-trained-no" type="checkbox" checked> No Preference</label>
-						</div>
-					</div>
-					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-						<p>Okay with Cats:</p>
-						<div class="cats-ok">
-							<label>
-							<input class="uk-checkbox" type="checkbox"> Yes</label>
-							<label>
-							<input class="uk-checkbox" type="checkbox" checked> No Preference</label>
-						</div>
-					</div>
-					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-						<p>Okay with Dogs:</p>
-						<div class="dogs-ok">
-							<label>
-							<input class="uk-checkbox" type="checkbox" value="js-checked"> Yes</label>
-							<label>
-							<input class="uk-checkbox" type="checkbox" checked> No Preference</label>
-						</div>
-					</div>
-					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-						<p>Okay with Kids:</p>
-						<div class="kids-ok">
-							<label>
-							<input class="uk-checkbox" type="checkbox"> Yes</label>
-							<label>
-							<input class="uk-checkbox" type="checkbox" checked> No Preference</label>
-						</div>
-					</div>
-					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
-						<p>Gender:</p>
-						<div class="gender-select">
-							<label>
-							<input class="uk-checkbox female" type="checkbox"> Female</label>
-							<label>
-							<input class="uk-checkbox male" type="checkbox"> Male</label>
-							<label>
-							<input class="uk-checkbox no-preference" type="checkbox" checked> No Preference</label>
-						</div>
+						<label><input class="uk-checkbox house-trained-yes" type="checkbox"> Yes</label>
+						<label><input class="uk-checkbox house-trained-no" type="checkbox" checked> No Preference</label>
 					</div>
 				</div>
-				<!-- size for search slider -->
+				<!-- CAT FRIENDLY OPTIONS -->
+				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+					<p>Okay with Cats:</p>
+					<div class="cats-ok">
+						<label><input class="uk-checkbox" type="checkbox"> Yes</label>
+						<label><input class="uk-checkbox" type="checkbox" checked> No Preference</label>
+					</div>
+				</div>
+				<!-- DOG FRIENDLY OPTIONS -->
+				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+					<p>Okay with Dogs:</p>
+					<div class="dogs-ok">
+						<label><input class="uk-checkbox" type="checkbox" value="js-checked"> Yes</label>
+						<label><input class="uk-checkbox" type="checkbox" checked> No Preference</label>
+					</div>
+				</div>
+				<!-- KID FRIENDLY OPTIONS -->
+				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+					<p>Okay with Kids:</p>
+					<div class="kids-ok">
+						<label><input class="uk-checkbox" type="checkbox"> Yes</label>
+						<label><input class="uk-checkbox" type="checkbox" checked> No Preference</label>
+					</div>
+				</div>
+				<!-- GENDER SELECTION -->
+				<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+					<p>Gender:</p>
+					<div class="gender-select">
+						<label><input class="uk-checkbox female" type="checkbox"> Female</label>
+						<label><input class="uk-checkbox male" type="checkbox"> Male</label>
+						<label><input class="uk-checkbox no-preference" type="checkbox" checked> No Preference</label>
+					</div>
+				</div>
+				<!-- SIZE SELECTION -->
 				<div class="uk-margin">
 					<p class="size-text">Size Group: No Preference</p>
 					<input class="uk-range size-select" type="range" value="0" min="0" max="4" step="1">
 				</div>
-				<!-- age for search slider -->
+				<!-- AGE SELECTION -->
 				<div class="uk-margin">
 					<p class="age-text">Age Group: No Preference</p>
 					<input class="uk-range age-select" type="range" value="0" min="0" max="4" step="1">
 				</div>
-				<!-- distance for search slider -->
+				<!-- DISTANCE SELECTION -->
 				<div class="uk-margin">
 					<p class="distance-text">Distance: No Preference</p>
-					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1">
-				</div>
-				<!-- Submit Button -->
+					<input class="uk-range distance-select" type="range" value="0" min="0" max="500" step="1"> </div>
+				<!-- SUBMIT BUTTON -->
 				<div class="uk-margin" uk-margin>
 					<a href="./Search.html" class="uk-button uk-button-default submit-search search-pets">Submit</a>
 				</div>
 			</fieldset>
 		</form>
 	</div>
-	<!-- uikit js -->
+	<!-- JQUERY SCRIPT -->
 	<script src="https://code.jquery.com/jquery-3.5.1.js"
 		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+	<!-- UIKIT SCRIPT -->
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.5.7/dist/js/uikit-icons.min.js"></script>
+	<!-- PROJECT SCRIPT -->
 	<script src="assets/script.js"></script>
 </body>
 
