--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
          <nav class="uk-navbar-container uk-background-primary uk-navbar">
             <div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
             <div class="uk-navbar-center"><h1>Pets Furever</h1></div>
-            <div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt today</a></div>
+            <div class="uk-navbar-right"><a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a></div>
          </nav>
       </header>
       <!-- ABOUT US MENU -->
