adding names to links

--- a/recipes.html
+++ b/recipes.html
@@ -51,8 +51,6 @@
 	</div>
     
 
-
-
     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
         <div class="uk-card-media-left uk-cover-container">
             <a href="https://www.allrecipes.com/recipe/140286/homemade-dog-food/">
@@ -68,8 +66,7 @@
             <div class="uk-navbar-center">
                 <h1>Pets Furever</h1>
             </div>
-            <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>Adopt
-                    today</a> </div>
+            <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
         </nav>
     </header>
     <!-- about us menu -->
