adding food recipe titles

--- a/recipes.html
+++ b/recipes.html
@@ -51,24 +51,7 @@
 	</div>
     
 
-    <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid>
-        <div class="uk-card-media-left uk-cover-container">
-            <a href="https://www.allrecipes.com/recipe/140286/homemade-dog-food/">
-                <img src="images/allrecipes.webp" alt="Dog Food" uk-cover>
-            </a>
-            <canvas width="600" height="400"></canvas>
-        </div>
-        <div>
-            <div class="uk-card-body">
-                <h3 class="uk-card-title">Recipe</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-            <div class="uk-navbar-center">
-                <h1>Pets Furever</h1>
-            </div>
-            <div class="uk-navbar-right"> <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a> </div>
-        </nav>
-    </header>
+    
     <!-- about us menu -->
     <div id="offcanvas-slide" uk-offcanvas>
         <div class="uk-offcanvas-bar">
@@ -120,7 +103,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Recipe</h3>
+                    <h3 class="uk-card-title">Turkey with Brown Rice</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
             </div>
@@ -135,7 +118,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Right</h3>
+                    <h3 class="uk-card-title">Ground Chicken with Veggies</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
             </div>
@@ -150,7 +133,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Right</h3>
+                    <h3 class="uk-card-title">Turkey and Veggies</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
             </div>
@@ -164,7 +147,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Left</h3>
+                    <h3 class="uk-card-title">Chicken Layer Cake</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
             </div>
@@ -179,7 +162,7 @@
             </div>
             <div>
                 <div class="uk-card-body">
-                    <h3 class="uk-card-title">Media Right</h3>
+                    <h3 class="uk-card-title">Sirloin with Eggs and Vegetables</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                 </div>
             </div>
