styled the application page to match the index and search pages. The radio buttons need to be fixed so that more than one can be clicked on at a time

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <fieldset class="uk-fieldset">
                <legend class="uk-legend">Find a pet!</legend>
                <div class="uk-margin">
-                  <select class="uk-select breed-select">
+                  <select class="uk-select breed-select form-input-select">
                      <!-- GENERATED THROUGH AJAX RESPONSE -->
                      <option class="breed-select-text">Click for breeds</option>
                   </select>
