styles to hamburger

--- a/application.html
+++ b/application.html
@@ -13,21 +13,17 @@
 
 <body>
     <header>
-		<nav class="uk-navbar-container uk-navbar dark-background padding-20">
-			<div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png"
-						alt="white dog paw"></a></div>
-			<div class="uk-navbar-center">
-				<h1>Pets Furever</h1>
-			</div>
-			<div class="uk-navbar-right">
-				<ul class="uk-navbar-nav uk-visible@s">
-					<a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a>
-				</ul>
-				<a href="#offcanvas-slide" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-iconuk-toggle="target: #offcanvas-slide"></a>
-			</div>
-		</nav>
-	</header>
-
+        <nav class="uk-navbar-container uk-navbar dark-background padding-20">
+           <div class="uk-navbar-left"><a class="logo" href="index.html"><img src="./images/logo.png" alt="white dog paw"></a></div>
+           <div class="uk-navbar-center"><h1>Pets Furever</h1></div>
+          <div class="uk-navbar-right">
+              <ul class="uk-navbar-nav uk-visible@s">
+                  <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a>
+              </ul>
+              <a href="#offcanvas-slide" class="uk-navbar-toggle uk-hidden@s hamburger" uk-navbar-toggle-icon uk-toggle="target: #offcanvas-slide"></a>
+          </div>
+        </nav>
+     </header>
     <!-- about us menu -->
     <div id="offcanvas-slide" uk-offcanvas>
         <div class="uk-offcanvas-bar">
