--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             <ul class="uk-navbar-nav uk-visible@s">
                 <a href="#offcanvas-slide" class="uk-button uk-button-default" uk-toggle>About Us</a>
             </ul>
-            <a href="#offcanvas-slide" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #offcanvas-slide"></a>
+            <a href="#offcanvas-slide" class="uk-navbar-toggle uk-hidden@s hamburger" uk-navbar-toggle-icon uk-toggle="target: #offcanvas-slide"></a>
         </div>
-
-
       </nav>
    </header>
    <!-- ABOUT US MENU -->
